--- a/src/components/CaseHeroResume/CaseHeroResume.scss
+++ b/src/components/CaseHeroResume/CaseHeroResume.scss
@@ -9,6 +9,13 @@
 	// breadcrumb is flush, no extra margin
 }
 
+.c-case-hero-resume__title-block {
+	display: flex;
+	flex-direction: column;
+	gap: var(--base-space-4);
+	width: 100%;
+}
+
 .c-case-hero-resume__surtitle {
 	text-transform: uppercase;
 }
